[gd_scene load_steps=9 format=3 uid="uid://bhsy5m6kifgl3"]

[ext_resource type="Script" path="res://scenes/entities/npc/kitchen/info/recipe_info.gd" id="1_7x2cb"]
[ext_resource type="PackedScene" uid="uid://c020nwuhxw7kw" path="res://core/recipe/recipe_info.tscn" id="1_t5epd"]
[ext_resource type="FontFile" uid="uid://61ntd2mdvlrp" path="res://fonts/PixgamerRegular-OVD6A.ttf" id="2_hktnl"]
[ext_resource type="PackedScene" uid="uid://ckmbf7xea4x1t" path="res://scenes/ui/item.tscn" id="4_73mhw"]
[ext_resource type="Texture2D" uid="uid://bqxc2orlv1h41" path="res://sprite/ui/disable_button.png" id="6_6d187"]
[ext_resource type="Texture2D" uid="uid://dtpjum3svhnv2" path="res://sprite/ui/button.png" id="7_cdt1u"]

[sub_resource type="LabelSettings" id="LabelSettings_840xk"]
font = ExtResource("2_hktnl")

[sub_resource type="LabelSettings" id="LabelSettings_qai6m"]
font = ExtResource("2_hktnl")

[node name="RecipeInfo" instance=ExtResource("1_t5epd")]
script = ExtResource("1_7x2cb")
hotbar_db = null

[node name="Label" parent="." index="0"]
text = "Nguyên liệu để nấu món"

[node name="Item" parent="." index="1" instance=ExtResource("4_73mhw")]
layout_mode = 2

[node name="TimeLabel" type="Label" parent="." index="2"]
layout_mode = 2
label_settings = SubResource("LabelSettings_840xk")
horizontal_alignment = 1

[node name="Label2" type="Label" parent="." index="3"]
layout_mode = 2
text = "Nguyên liệu để hoàn thành món này"
label_settings = SubResource("LabelSettings_qai6m")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="." index="5"]
layout_mode = 2
alignment = 1

[node name="CancelButton" type="Button" parent="HBoxContainer" index="0"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_hktnl")
text = "Huỷ"
icon = ExtResource("6_6d187")
flat = true
icon_alignment = 1

[node name="StartButton" type="Button" parent="HBoxContainer" index="1"]
clip_contents = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_hktnl")
text = "Bắt đầu"
icon = ExtResource("7_cdt1u")
flat = true
icon_alignment = 1

[connection signal="pressed" from="HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="HBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
